[package]
authors = ["Serbe <mkoctuk@gmail.com>"]
edition = "2018"
name = "rprch"
version = "0.9.0"

[dependencies]
anyhow = "1.0"
deadpool-postgres = "0.7"
dotenv = "0.15"
hyper = {version = "0.14", features = ['http1', 'server', 'tcp']}
tokio = {version = "1.4", features = ["io-util", "sync", "macros", "rt-multi-thread"]}
tokio-postgres = "0.7"
